--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ body {
 
 #header {
   width: 100%;
-  background-image: url("/public/images/background.png");
+  background-image: url("/images/background.png");
   background-size: cover;
   background-position: center;
 }
