--- a/index.css
+++ b/index.css
@@ -87,7 +87,7 @@ nav ul li a:hover::after {
   color: #ff004f;
 }
 
-/* About */
+/* -----------------About-------------- */
 #about {
   padding: 80px 0;
   color: #ababab;
@@ -96,6 +96,7 @@ nav ul li a:hover::after {
 .row {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   flex-wrap: wrap;
 }
 
@@ -166,6 +167,7 @@ nav ul li a:hover::after {
 
 .tab-contents.active-tab {
   display: block;
+  transform: 0.5s;
 }
 
 /* ------------services-------------- */
@@ -211,6 +213,39 @@ nav ul li a:hover::after {
 .services-list div:hover {
   background: #ff004f;
   transform: translateY(-10px);
+}
+
+/* --------------------------Tools I use---------------- */
+
+.tools-section {
+  text-align: center;
+  padding: 40px 20px;
+  background-color: #080808;
+}
+
+.tools-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  margin-top: 40px;
+}
+
+.tool-item {
+  width: 120px;
+  text-align: center;
+}
+
+.tool-item img {
+  width: 100px;
+  height: auto;
+  margin-bottom: 10px;
+}
+
+.tool-item p {
+  font-size: 1rem;
+  color: #555;
 }
 
 /* ---------------portfolio---------- */
